# musicxmatch-api

./: .env.example  .gitignore  Addon_Lyrics_Bugs.js  Addon_Lyrics_Deezer.js  Addon_Lyrics_Genie.js  Addon_Lyrics_MusicXMatch.js  CODEX_TASKS.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md  addon-manager-compat.ps1  addon-manager-compat.sh  install.ps1  install.sh  manifest.json  musicxmatch.js  package.json  server.js  setup.py  uninstall.ps1  uninstall.sh  version.json
.github/workflows/: ci.yml
legacy/: server.py
legacy/src/musicxmatch_api/: server.py
scripts/: addon_definitions.json  bump_version.sh  generate_addons.js  patch-ivlyrics-selection.ps1  patch-ivlyrics-selection.sh
src/: bugs.rs  deezer.rs  genie.rs  logging.rs  main.rs  matching.rs  musixmatch.rs  provider_util.rs
tests/fixtures/bugs/: search_response.json  synced_lyrics.txt
tests/fixtures/genie/: lyrics_payload.jsonp  search_result.html
