[package]
name = "ivlyrics-musicxmatch-server"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "Local lyrics bridge server for ivLyrics powered by musixmatch-inofficial"
repository = "https://github.com/oneulddu/musicxmatch-api"

[[bin]]
name = "ivlyrics-musicxmatch-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
base64 = "0.22"
dirs = "6.0.0"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
